Fix spacing on News item lists

--- a/assets/scss/_components.post.scss
+++ b/assets/scss/_components.post.scss
@@ -10,9 +10,13 @@
 
 .single-post article {
   p, li {
-    margin-bottom: $spacing-unit;
     @include breakpoint(medium) {
       @include font-size(22px, 1.7);
+    }
+  }
+  p, ul {
+    margin-bottom: $spacing-unit;
+    @include breakpoint(medium) {
       margin-bottom: double($spacing-unit);
     }
   }
